Week 1 Lab 2 Assignment (Click counter) Added code.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,10 @@ a:active {
     color: #fb0e02;
 }
 
-
+.header{
+    min-height: 500px;
+    background-color: #DFDFDF;
+}
 
 
 body > header, body > footer {
